package com.example.bbsoot.model;

import org.springframework.data.jpa.repository.JpaRepository;

public interface ToukouRepository  extends JpaRepository <Toukou, Integer>{

}
